# odysseus-launcher

./: AppItemDelegate.qml  CMakeLists.txt  applicationmodel.cpp  applicationmodel.h  desktopentryreader.cpp  desktopentryreader.h  iconimageprovider.cpp  iconimageprovider.h  launcherviewmanager.cpp  launcherviewmanager.h  main.cpp  main.qml  processhelper.cpp  processhelper.h  resources.qrc
